--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "repository": "github:arkokoley/pdfvuer",
   "scripts": {
+    "serve": "vue-cli-service serve",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "build-bundle": "vue-cli-service build --target lib --name pdfvuer ./src/App.vue",
@@ -21,6 +22,7 @@
     "core-js": "3",
     "pdfjs-dist": "2.3.200",
     "raw-loader": "^0.5.1",
+    "vue": "^2.6.11",
     "vue-resize-sensor": "^2.0.0"
   },
   "browserslist": [
@@ -32,6 +34,7 @@
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.2",
     "cross-env": "^5.0.5",
